# rules_python

examples/pip_parse/: BUILD.bazel
python/: BUILD.bazel  defs.bzl  py_precompiler_toolchain.bzl
python/private/common/: attributes.bzl  common.bzl  common_bazel.bzl  providers.bzl  py_executable.bzl  py_executable_bazel.bzl  py_library.bzl  py_library_rule_bazel.bzl
tests/integration/pip_repository_entry_points/: BUILD.bazel  WORKSPACE  wrapper.sh
tools/precompiler/: BUILD.bazel  precompiler.py
tools/private/precompiler/: BUILD.bazel
